Added the battleships

--- a/about.html
+++ b/about.html
@@ -57,7 +57,11 @@ h2 {
 
 <h2 style="font-family: Chiller Regular;"><center>This game was created by Daniel Manankichian for SDSU Milestone 1 project. I hope you enjoy my game!</center></p>
 
-<button onclick="myFunction('index.html')" class="button button1">Main Menu</button>
+<div class="container">
+
+    <button onclick="myFunction('index.html')" class="button button1">Main Menu</button>
+
+</div>
 
 <script>
     function myFunction(link) {
