--- a/game.html
+++ b/game.html
@@ -20,9 +20,9 @@
         <div class="carrier-preview carrier" draggable="true"></div>
     </div>
 
+    <button id="flip-button" onclick="flip()">Flip ship</button>
+    <button id="start-button">Start Game</button>
 
-
-
-
+    <script src="app.js"></script>
 </body>
 </html>
