finishing touches on game and created the README.md

--- a/about.html
+++ b/about.html
@@ -57,6 +57,7 @@ h2 {
 
 <h2 style="font-family: Chiller Regular;"><center>This game was created by Daniel Manankichian for SDSU Milestone 1 project. I hope you enjoy my game!</center></p>
 
+  <h2 style="font-family: Chiller Regular;"><center>Dont forget to read the README.md for more info!</center></p>
 <div class="container">
 
     <button onclick="myFunction('index.html')" class="button button1">Main Menu</button>
